side nav menu collaps options correctly but transition doesnt work

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,5 +7,5 @@
 }
 
 body {
-    font-family: 'Maitree Regular', sans-serif;
-  }
+    font-family: 'Maitree', sans-serif;
+}
