--- a/resources/css/fonts.css
+++ b/resources/css/fonts.css
@@ -1,6 +1,6 @@
 /* Maitree Bold */
 @font-face {
-    font-family: 'Maitree Bold';
+    font-family: 'Maitree';
     src: url('/fonts/Maitree-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
@@ -8,7 +8,7 @@
 
 /* Maitree extraLight */
 @font-face {
-    font-family: 'Maitree Extra Light';
+    font-family: 'Maitree';
     src: url('/fonts/Maitree-ExtraLight.ttf') format('truetype');
     font-weight: lighter;
     font-style: normal;
@@ -16,7 +16,7 @@
 
 /* Maitree Light */
 @font-face {
-    font-family: 'Maitree Light';
+    font-family: 'Maitree';
     src: url('/fonts/Maitree-Light.ttf') format('truetype');
     font-weight: light;
     font-style: normal;
@@ -24,7 +24,7 @@
 
 /* Maitree medium */
 @font-face {
-    font-family: 'Maitree Medium';
+    font-family: 'Maitree';
     src: url('/fonts/Maitree-Medium.ttf') format('truetype');
     font-weight: medium;
     font-style: normal;
@@ -32,7 +32,7 @@
 
 /* Maitree regular */
 @font-face {
-    font-family: 'Maitree Medium';
+    font-family: 'Maitree';
     src: url('/fonts/Maitree-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
@@ -40,7 +40,7 @@
 
 /* Maitree regular */
 @font-face {
-    font-family: 'Maitree semibold';
+    font-family: 'Maitree';
     src: url('/fonts/Maitree-SemiBold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
